Change "saved" to "copied" in post screenshot messages

This commit replaces "saved" with "copied" when referring to the
clipboard.

BUG: 454269